--- a/gmall-realtime/pom.xml
+++ b/gmall-realtime/pom.xml
@@ -15,8 +15,8 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <flink.version>1.13.0</flink.version>
-        <scala.version>2.12</scala.version>
+        <flink.version>1.13.6</flink.version>
+        <scala.version>2.11</scala.version>
         <hadoop.version>3.1.3</hadoop.version>
     </properties>
 
@@ -196,14 +196,14 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <artifactSet>
-                                <excludes>
-                                    <exclude>com.google.code.findbugs:jsr305</exclude>
-                                    <exclude>org.slf4j:*</exclude>
-                                    <exclude>log4j:*</exclude>
-                                    <exclude>org.apache.hadoop:*</exclude>
-                                </excludes>
-                            </artifactSet>
+<!--                            <artifactSet>-->
+<!--                                <excludes>-->
+<!--                                    <exclude>com.google.code.findbugs:jsr305</exclude>-->
+<!--                                    <exclude>org.slf4j:*</exclude>-->
+<!--                                    <exclude>log4j:*</exclude>-->
+<!--                                    <exclude>org.apache.hadoop:*</exclude>-->
+<!--                                </excludes>-->
+<!--                            </artifactSet>-->
                             <filters>
                                 <filter>
                                     <!-- Do not copy the signatures in the META-INF folder.Otherwise, this might cause SecurityExceptions when using the JAR. -->
